消息组件层级优化，提高加载速度